--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "highlight.js": "^11.11.1",
+    "html2canvas-pro": "^1.5.11",
     "marked": "^15.0.12",
     "marked-highlight": "^2.2.1",
     "mermaid": "^11.6.0",
